--- a/magestack.csproj
+++ b/magestack.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.1.1" />
     <PackageReference Include="MySql.Data" Version="8.0.29" />
     <PackageReference Include="QuestPDF" Version="2022.5.0" />
+    <PackageReference Include="SendGrid" Version="9.28.0" />
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
   </ItemGroup>
   <ItemGroup>
